--- a/.gitignore
+++ b/.gitignore
@@ -440,3 +440,4 @@ FodyWeavers.xsd
 # Additional files built by Visual Studio
 
 # End of https://www.toptal.com/developers/gitignore/api/windows,visualstudiocode,visualstudio
+*.png
